Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumObjTextObjField.quorum
class main
    Text t
    Number num
    action Main
        t:SetValue("text")
        num = cast(Number, t)
    end
end